[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous Multi-Agent Enterprise Risk Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "openai>=1.30.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "qdrant-client>=1.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["sentinel*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
